--- a/index.html
+++ b/index.html
@@ -9,6 +9,20 @@
   <script type="text/javascript" src="js/bootstrap.min.js"></script>
   <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
   <title>birdOcular: What birds are around you?</title>
+  <script type="text/javascript">
+  $(function() {
+    function initialize() {
+        var mapOptions = {
+          center: new google.maps.LatLng(-34.397, 150.644),
+          zoom: 8
+        };
+        var map = new google.maps.Map(document.getElementById("map-canvas"),
+            mapOptions);
+      }
+    google.maps.event.addDomListener(window, 'load', initialize);
+  })
+  </script>
+
 </head>
  <!-- Col should add up to 12 -->
 <body>
@@ -25,7 +39,9 @@
       <div id="search" class="col-md-6">Search bar</div>
     </div>
     <div id="map-pane" class="row">
-      <div class="col-md-8">Map</div>
+      <div class="col-md-8" >
+        <div id="map-canvas" style="height: 90vh;"></div>
+      </div>
       <div class="col-md-4">Search results</div>
     </div>
   </div>
