--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 
 <html>
+<!-- TEAM MANGO FTW -->
 <head>
   <script src="https://code.jquery.com/jquery-1.10.2.min.js"></script>
   <script type="text/javascript"
