--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
       src="https://maps.googleapis.com/maps/api/js?key=AIzaSyChibrTeOY3gx8Kg4xQgpj1PnCWFmw10W8&sensor=false">
     </script>
   <script type="text/javascript" src="js/bootstrap.min.js"></script>
+  <script type="text/javascript" src="js/filter.js"></script>
   <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
   <title>birdOcular: What birds are around you?</title>
   <script type="text/javascript">
