Implements loading json and parsing data

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     </script>
   <script type="text/javascript" src="js/bootstrap.min.js"></script>
   <script type="text/javascript" src="js/filter.js"></script>
+  <script type="text/javascript" src="js/loadBirds.js"></script>
   <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
   <title>birdOcular: What birds are around you?</title>
   <script type="text/javascript">
