--- a/index.html
+++ b/index.html
@@ -21,17 +21,17 @@
         center: center,
         zoom: 8
       };
-      var map = new google.maps.Map(document.getElementById("map-canvas"),
+      var map = new google.maps.Map(document.getElementById('map-canvas'),
           mapOptions);
       // Create a content box
-      var contentString = "Hello bird!";
+      var contentString = 'Hello bird!';
       var infoWindow = new google.maps.InfoWindow({
         content: contentString
       })
       var marker = new google.maps.Marker({
         position: center,
         map: map,
-        title: "Hello World"
+        title: 'Hello World'
       })
       google.maps.event.addListener(marker, 'click', function() {
         infoWindow.open(map, marker);
