--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
       src="https://maps.googleapis.com/maps/api/js?key=AIzaSyChibrTeOY3gx8Kg4xQgpj1PnCWFmw10W8&sensor=false">
     </script>
   <script type="text/javascript" src="js/bootstrap.min.js"></script>
+  <script type="text/javascript" src="birdnames.json"></script>
+  <script type="text/javascript" src="js/jquery-1.9.0.min.js"></script>
+  <script type="text/javascript" src="js/jquery-ui-1.10.0.custom.min.js"></script>
   <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
   <title>birdOcular: What birds are around you?</title>
   <script type="text/javascript">
@@ -36,6 +39,23 @@
       });
     }
     google.maps.event.addDomListener(window, 'load', initialize);
+
+    //AUTOCOMPLETE
+    //var current_dict = birdDict;
+    //var keys = Object.keys(current_dict);
+    //var tags = keys;
+    var tags = ["Northern Cardinal","Cardinalis cardinalis","cool_bird01","House Sparrow","Passer domesticus"];
+   
+    $( "#input_bar" ).autocomplete({
+	source: function( request, response ) {
+	    var matcher = new RegExp( "^" + $.ui.autocomplete.escapeRegex( request.term ), "i" );
+	    response( $.grep( tags, function( item ){
+		return matcher.test( item );
+	    }) );
+	}
+    });
+    $( "#input_bar" ).autocomplete( "option", "minLength", 1 );
+
   })
   </script>
 
@@ -52,7 +72,7 @@
     <div class="row">
       <div id="searchbar" class="col-md-4">
         <div class="input-group">
-          <input type="text" class="form-control" placeholder="Filter by species, name, or location">
+          <input id="input_bar" type="text" class="form-control" placeholder="Filter by species, name, or location">
           <span class="input-group-btn">
             <button class="btn btn-default " type="button">Filter</button>
           </span>
