Adds code to display bird markers on map

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
   <script type="text/javascript" src="js/handlebars-v1.3.0.js"></script>
   <script type="text/javascript" src="birdnames.json"></script>
   <script type="text/javascript" src="js/filter.js"></script>
+  <script type="text/javascript" src="js/display.js"></script>
   <script type="text/javascript" src="js/loadBirds.js"></script>
   <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
   <title>birdOcular: What birds are around you?</title>
@@ -68,6 +69,7 @@
     <span>Common Name: {{commonName}}</span><br>
     <span>Species Name: {{speciesName}}</span><br>
     <span>Date: {{date}}</span><br>
+    <span>User: {{userSpotted}}</span><br>
     <span>Comment: {{comment}}</span><br>
   </div>
   </script>
