--- a/index.html
+++ b/index.html
@@ -11,8 +11,7 @@
   <script type="text/javascript" src="js/jquery-ui-1.10.0.custom.min.js"></script>
   <script type="text/javascript" src="js/handlebars-v1.3.0.js"></script>
   <script type="text/javascript" src="birdnames.json"></script>
-  <script type="text/javascript" src="js/filter.js"></script>
-  <script type="text/javascript" src="js/display.js"></script>
+  <script type="text/javascript" src="js/utilities.js"></script>
   <script type="text/javascript" src="js/loadBirds.js"></script>
   <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
   <title>birdOcular: What birds are around you?</title>
