--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <script type="text/javascript" src="js/bootstrap.min.js"></script>
   <script type="text/javascript" src="js/jquery-ui-1.10.0.custom.min.js"></script>
   <script type="text/javascript" src="js/handlebars-v1.3.0.js"></script>
-  <script type="text/javascript" src="birdnames.json"></script>
+  <script type="application/json" src="birdnames.json"></script>
   <script type="text/javascript" src="js/utilities.js"></script>
   <script type="text/javascript" src="js/loadBirds.js"></script>
   <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
@@ -103,7 +103,7 @@
                 <button class="btn btn-default " type="button">Filter</button>
               </span>
             </div><!-- /input-group -->
-            
+
           </div>
         </div>
       </div>
@@ -133,5 +133,39 @@
     </div>
   </div>
 
+  <!-- Separate container for add bird overlay -->
+  <div class="container" id="add-bird-overlay">
+    <form class="form-horizontal col-md-6 col-md-offset-1" role="form" action="">
+      <div class="form-group">
+        <label for="common-name">Common name</label>
+        <input type="text" placeholder="Common name" class="form-control" id="common-name">
+      </div>
+      <div class="form-group">
+        <label for="species-name">Species name</label>
+        <input type="text" placeholder="Species name" class="form-control" id="species-name">
+      </div>
+      <div class="form-group">
+        <label for="sighting-date">Date</label>
+        <input type="date" class="form-control" id="sighting-date">
+      </div>
+      <div class="form-group">
+        <label for="sighting-time">Time</label>
+        <input type="time" id="sighting-time" class="form-control">
+      </div>
+      <div class="form-group">
+        <label for="sighting-location">Location</label>
+        <input type="text" id="sighting-location" class="form-control" placeholder="Location of sighting">
+      </div>
+      <div class="form-group">
+        <label for="bird-pic">Insert picture</label>
+        <input type="file" id="bird-pic" class="form-control">
+      </div>
+      <div class="form-group">
+        <label for="sighting-comments">Comments</label>
+        <textarea id="sighting-comments" class="form-control" rows="3" placeholder="Describe sighting"></textarea>
+      </div>
+      <button type="submit" class="btn btn-default">Add bird</button>
+    </form>
+  </div>
 </body>
 </html>
