--- a/index.html
+++ b/index.html
@@ -4,11 +4,14 @@
 <!-- TEAM MANGO FTW -->
 <head>
   <script src="https://code.jquery.com/jquery-1.10.2.min.js"></script>
+  <!-- Adds deprecated functions so we can use overlay -->
+  <script src="http://code.jquery.com/jquery-migrate-1.2.1.js"></script>
   <script type="text/javascript"
       src="https://maps.googleapis.com/maps/api/js?key=AIzaSyChibrTeOY3gx8Kg4xQgpj1PnCWFmw10W8&sensor=false">
     </script>
   <script type="text/javascript" src="js/bootstrap.min.js"></script>
   <script type="text/javascript" src="js/jquery-ui-1.10.0.custom.min.js"></script>
+  <script type="text/javascript" src="js/jquery.tools.min.js"></script>
   <script type="text/javascript" src="js/handlebars-v1.3.0.js"></script>
   <script type="application/json" src="birdnames.json"></script>
   <script type="text/javascript" src="js/utilities.js"></script>
@@ -73,6 +76,34 @@
   </div>
   </script>
 
+  <style>
+    .overlay {
+      top:0;
+      display:none;
+      z-index:1000;
+      width: 100vw;
+      height: 100vh;
+      background: rgba(0, 0, 0, 0.4)
+    }
+
+    #add-bird-form {
+      /*Reset opacity for form*/
+      background: white;
+    }
+
+    .simple_overlay .close {
+      background-color: #FFFFFF;
+      /*position:absolute;
+      right:-15px;
+      top:-15px;
+      cursor:pointer;
+      height:35px;
+      width:35px;*/
+      height: 35px;
+      width:35px;
+    }
+  </style>
+
 </head>
  <!-- Col should add up to 12 -->
 <body>
@@ -86,7 +117,7 @@
     <div class="row">
       <div id="searchbar" class="row">
           <div class="col-md-4">
-            <button id="add-bird" type="button" class="btn btn-default">Add bird</button>
+            <button id="add-bird" rel="#add-bird-overlay" type="button" class="btn btn-default">Add bird</button>
           </div>
           <div class="col-md-4">
             <select name="" id="time-select" class="form-control">
@@ -134,38 +165,48 @@
   </div>
 
   <!-- Separate container for add bird overlay -->
-  <div class="container" id="add-bird-overlay">
-    <form class="form-horizontal col-md-6 col-md-offset-1" role="form" action="">
-      <div class="form-group">
-        <label for="common-name">Common name</label>
-        <input type="text" placeholder="Common name" class="form-control" id="common-name">
-      </div>
-      <div class="form-group">
-        <label for="species-name">Species name</label>
-        <input type="text" placeholder="Species name" class="form-control" id="species-name">
-      </div>
-      <div class="form-group">
-        <label for="sighting-date">Date</label>
-        <input type="date" class="form-control" id="sighting-date">
-      </div>
-      <div class="form-group">
-        <label for="sighting-time">Time</label>
-        <input type="time" id="sighting-time" class="form-control">
-      </div>
-      <div class="form-group">
-        <label for="sighting-location">Location</label>
-        <input type="text" id="sighting-location" class="form-control" placeholder="Location of sighting">
-      </div>
-      <div class="form-group">
-        <label for="bird-pic">Insert picture</label>
-        <input type="file" id="bird-pic" class="form-control">
-      </div>
-      <div class="form-group">
-        <label for="sighting-comments">Comments</label>
-        <textarea id="sighting-comments" class="form-control" rows="3" placeholder="Describe sighting"></textarea>
-      </div>
-      <button type="submit" class="btn btn-default">Add bird</button>
-    </form>
+  <div id="add-bird-overlay" class="overlay">
+    <div class="container" >
+      <form id="add-bird-form" class="form-horizontal col-md-6 col-md-offset-1" role="form" action="">
+        <div class="form-group">
+          <label for="common-name">Common name</label>
+          <input type="text" placeholder="Common name" class="form-control" id="common-name">
+        </div>
+        <div class="form-group">
+          <label for="species-name">Species name</label>
+          <input type="text" placeholder="Species name" class="form-control" id="species-name">
+        </div>
+        <div class="form-group">
+          <label for="sighting-date">Date</label>
+          <input type="date" class="form-control" id="sighting-date">
+        </div>
+        <div class="form-group">
+          <label for="sighting-time">Time</label>
+          <input type="time" id="sighting-time" class="form-control">
+        </div>
+        <div class="form-group">
+          <label for="sighting-location">Location</label>
+          <input type="text" id="sighting-location" class="form-control" placeholder="Location of sighting">
+        </div>
+        <div class="form-group">
+          <label for="bird-pic">Insert picture</label>
+          <input type="file" id="bird-pic" class="form-control">
+        </div>
+        <div class="form-group">
+          <label for="sighting-comments">Comments</label>
+          <textarea id="sighting-comments" class="form-control" rows="3" placeholder="Describe sighting"></textarea>
+        </div>
+        <button type="submit" class="btn btn-default">Add bird</button>
+      </form>
+    </div>
   </div>
+  <script>
+  $(function() {
+    // I can make the overlay appear, but I can't make the mask work
+    $("#add-bird").overlay({
+      top: 0,
+    });
+  })
+  </script>
 </body>
 </html>
