--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
       
     <!-- header -->
     <div class="row" id="filter-options">
-          <div class="col-md-2">
+          <div class="col-md-2" style="text-align:left;">
             <button id="add-bird" type="button" class="btn btn-default">Add bird</button>
           </div>
           <div class="col-md-4">
