--- a/index.html
+++ b/index.html
@@ -112,18 +112,23 @@
           <div class="col-md-4"></div>
           <div class="col-md-4" style="background-color:rgba(255,255,255,.6);">
               <div class="input-group">
-                    <span class="input-group-addon">
-                      <input id="northern-cardinal" type="checkbox">
-                    </span>
-                    <label for="northern-cardinal">Northern Cardinal</label>
-                  </div><!-- /input-group -->
+                <span class="input-group-addon">
+                  <input id="northern-cardinal" type="checkbox">
+                </span>
+                <span class="input-group-addon"> Label yo </span>
+                <span class="input-group-btn">
+                  <button class="btn btn-default" type="button">
+                    <span class="glyphicon glyphicon-remove"></span>
+                  </button>
+                </span>
+              </div><!-- /input-group -->
 
-                  <div class="input-group">
-                    <span class="input-group-addon">
-                      <input type="checkbox">
-                    </span>
-                    <input type="text" class="form-control">
-                  </div><!-- /input-group -->
+              <div class="input-group">
+                <span class="input-group-addon">
+                  <input type="checkbox">
+                </span>
+                <input type="text" class="form-control">
+              </div><!-- /input-group -->
         </div>
       </div>
       <div class="row" style="z-index:0;">
