--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
                 <span class="input-group-addon">
                   <input id="northern-cardinal" type="checkbox">
                 </span>
-                <span class="input-group-addon"> Label yo </span>
+                <span class="input-group-addon filter-list-species"> Northern Cardinal </span>
                 <span class="input-group-btn">
                   <button class="btn btn-default" type="button">
                     <span class="glyphicon glyphicon-remove"></span>
@@ -129,7 +129,12 @@
                 <span class="input-group-addon">
                   <input type="checkbox">
                 </span>
-                <input type="text" class="form-control">
+                <span class="input-group-addon filter-list-species"> Other bird </span>
+                <span class="input-group-btn">
+                  <button class="btn btn-default" type="button">
+                    <span class="glyphicon glyphicon-remove"></span>
+                  </button>
+                </span>
               </div><!-- /input-group -->
         </div>
       </div>
