not quite fixed yet
fixing the bar

--- a/index.html
+++ b/index.html
@@ -56,16 +56,16 @@
     //var current_dict = birdDict;
     //var keys = Object.keys(current_dict);
     //var tags = keys;
-    var tags = ["Northern Cardinal","Cardinalis cardinalis","cool_bird01","House Sparrow","Passer domesticus"];
+    var tags = ["aaron","Atlantic fish","Atlantic marble","bebop","Black Jay","Boxius beer","Cardinalis cardinalis","cool_bird00","cool_bird01","diamond","Encephalitis","Encephalogram","Finnix","garr","garrrr","Haymarket","House Sparrow","instagram","Jay","Jungle Jay","lazy dog","mama","mary","Northern Cardinal","Northern Jay","oklahoma","Passer domesticus","rabbit","Southern Cardinal","taylor","tilly taylor","uber","vietnam","wisconsin","woohoo","x-ray","YYY Jay","Zebra"];
 
     $( "#input_bar" ).autocomplete({
 	source: function( request, response ) {
 	    var matcher = new RegExp( "^" + $.ui.autocomplete.escapeRegex( request.term ), "i" );
 	    response( $.grep( tags, function( item ){
-                var matches = matcher.test( item ); //TO DO: figure out the type of matches
-                for (var j = 0; j < matches.length; j++) {
-		    $( "#searchbar" ).append("<div class='input-group'><span class='input-group-addon'><input id='southern-cardinal' type='checkbox'></span><label for='southern-cardinal'>Southern Cardinal</label></div>");
-		}
+                var matches = matcher.test( item );
+                if (matches) {
+                    $( "#searchbar" ).prepend("<div class='input-group'><span class='input-group-addon'><input id='southern-cardinal' type='checkbox'></span><label for='southern-cardinal'>"+item+"</label></div>");
+                }
 		return matches;
 	    }) );
 	}
