Fix non-loading pin bug, remove loadbirds.js

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   <link rel="stylesheet" type="text/css" href="css/custom.css">
   <title>birdOcular: What birds are around you?</title>
   <script type="text/javascript">
-  // Global variable map to access anywhere
+  // Global variables to access anywhere
   var map;
   var birdSightings;
   $(function() {
