--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
   // Global variables to access anywhere
   var map;
   var birdSightings;
+  var markers=[];
   $(function() {
     function initialize() {
       // Create a map
@@ -33,7 +34,6 @@
       };
       map = new google.maps.Map(document.getElementById('map-canvas'),
           mapOptions);
-       $( "#searchbar" ).append("<div class='input-group'><span class='input-group-addon'><input id='southern-cardinal' type='checkbox'></span><label for='southern-cardinal'>Southern Cardinal</label></div>");
 
     }
     google.maps.event.addDomListener(window, 'load', initialize);
@@ -57,6 +57,7 @@
                 }
                 if (matches) {
                     $( "#filter-list #filters" ).append("<div class='input-group autocomplete-removable'><span class='input-group-addon filter-list-check'><input id='"+item+"' type='checkbox'></span><span class='input-group-addon filter-list-species'>"+item+"</span><span class='input-group-btn'><button class='btn btn-default' type='button'><span class='glyphicon glyphicon-remove'></span></button></span></div>");
+                    $('.filter-list-check input').on('change',filterBirdListener);
                 }
 		return false;
 	    }) );
@@ -74,17 +75,28 @@ var availableTags=randomTags;
    //TIME FILTER
       $('#time-select').on('change',function(e){
           console.log($(e.currentTarget).val());
-          Filter.byDate(birdSightings,new Date("October 13, 2014 11:13:00"),new Date("November 13, 2014 11:13:00"));
+          //i put in some bogus dates but the code should be right
+          Display.birdSightings(Filter.byDate(birdSightings,new Date("October 13, 2014 11:13:00"),new Date("November 13, 2014 11:13:00")));
       });
 
-      $('.filter-list-check input').on('change',function(e){
+      $('.filter-list-check input').on('change',filterBirdListener);
+      
+      function filterBirdListener(e){
           var currentBird=$(e.currentTarget).prop('id');
           var isChecked=$(e.currentTarget).prop('checked');
           if(isChecked){
-              Filter.bySpecies(birdSightings,currentBird);
+              clearMarkers();
+              Display.birdSightings(Filter.bySpecies(birdSightings,currentBird));
               console.log(currentBird);
             }
-      });
+      }
+      
+      function clearMarkers(){
+          for(var i=0;i<markers.length;i++){
+              markers[i].setMap(null);
+          }
+        markers=[];
+      }
 
     $.getJSON('smallbirds.json', function(json) {
       birdSightings = Birdmap.processBirds(json);
